ready to set app

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodejscert": "cd nodejscert && npm start",
-    "server":"nodemon server.js",
-    "dev":"concurrently --kill-others-on-fail \"npm run nodejscert\" \"npm run server\"",
-    "nodejscert:build":"cd nodejscert && npm run build"
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run nodejscert\" \"npm run server\"",
+    "nodejscert:build": "cd nodejscert && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "body-parser": "^1.19.0",
     "concurrently": "^6.3.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^4.1.4",
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14"
   }
 }
